<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/ageQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/ageQuestionDescription"
        android:text="@string/ageQuestionText"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/ageInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ageInput"
        android:layout_width="246dp"
        android:layout_height="48dp"
        android:layout_marginTop="84dp"
        android:hint="@string/typeYourAgeHint"
        android:inputType="number"
        android:text=""
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />


    <Button
        android:id="@+id/nextPageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/nextTextForButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/genderQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/genericSelectOptionText"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageInput"
        app:layout_constraintVertical_chainStyle="packed" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/nextPageButton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderQuestion">

        <RadioButton
            android:id="@+id/radio_pirates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radioButtonOption1" />

        <RadioButton
            android:id="@+id/id1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonOption2" />

        <RadioButton
            android:id="@+id/id2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Feminino c/ mais de 50 anos" />

        <RadioButton
            android:id="@+id/id3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonOption2" />

        <RadioButton
            android:id="@+id/id4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonOption2" />

        <RadioButton
            android:id="@+id/id5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonOption2" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>